--- a/docker-compose-test-local.yml
+++ b/docker-compose-test-local.yml
@@ -35,7 +35,7 @@ services:
     environment:
       - HOST_IP=${HOST_IP}
     network_mode: host
-    command: bash -c "go get -d -v -t && go test --tags integration -v"
+    command: bash -c "go get -d -v -t"
 
   db:
     image: mongo
